<resources>
    <string name="app_name">FoodiePal</string>
    <string name="lblEnterEmailRequired">Email address (required)</string>
    <string name="lblPasswordRequired">Password (Required)</string>
    <string name="lblEnterPasswordHint">Enter password</string>
    <string name="lblEnterEmailHint">Enter email address</string>
    <string name="lblForgotPassword">Forgot Password?</string>
    <string name="lblSignIn">Sign In</string>
    <string name="lblSignInAccount">Sign in to your account</string>
    <string name="lblCreateNewAccount">Create your account</string>
    <string name="lblEmpty" />
    <string name="lblNoAccount">Don\'t have an account?</string>
    <string name="lblCreateNewAcc">Create a new account</string>
    <string name="descWalmartLogo">Walmart logo</string>
    <string name="lblShoppingTableHeader">Shop by Categories</string>
    <string name="descElectronics">Electronic items</string>
    <string name="descClothes">Clothes</string>
    <string name="descBeautyItems">Beauty items</string>
    <string name="descGroceryItems">Grocery items</string>
    <string name="lblFood">Food</string>
    <string name="lblBeauty">Beauty</string>
    <string name="lblClothing">Clothing</string>
    <string name="lblElectronics">Electronics</string>
    <string name="lblFirstName">First Name*</string>
    <string name="lblLastName">Last Name*</string>
    <string name="lblEmailAddressStared">Email Address*</string>
    <string name="lblPasswordStared">Password*</string>
    <string name="lblCreateAccount">Create Account</string>
    <string name="txtItemName">Galaxy</string>
    <string name="txtSamplePrice">$1250</string>
    <string name="txtAdd">Add</string>
    <string name="txtItemModel">S23 Ultra</string>
    <string name="lblSampleEmail">a@b.com</string>
    <string name="lblSamplePassword">123</string>
    <string name="txtItemDesc">12-core CPU\n18-core GPU</string>
    <string name="lblHome">Home</string>
    <string name="lblViewCart">View Cart</string>
    <string name="lblBack">Back</string>
    <string name="lblAvailableItems">Available Items</string>
    <string name="lblAppName">FoodiePal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_floating_button">FloatingButton</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="lblRecipes">Recipes</string>
    <string name="lblMenuPlanner">Menu Planner</string>
    <string name="lblBlog">Blog</string>
    <string name="lblContact">Contact</string>
    <string name="lblAboutMe">About Me</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="lblRecipeHeader">Available Recipes</string>
    <string name="lblAddNewRecipe">Add new recipe</string>
    <string name="lblAdd">Add</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblRecipeName">Recipe Name</string>
    <string name="lblIngredients">Ingredients</string>
    <string name="lblInstructions">Instructions</string>
    <string name="lblMyName">Mohammad Aiub Khan</string>
    <string name="lblEmail">makhan@miu.edu</string>
    <string name="lblPhoneNumber">+1 (641) 123–4567</string>
    <string name="lblRecipePlannerHeading">Plan Recipe by week</string>
    <string name="lblTypeRecipeName">Type recipe names here</string>
    <string name="lblSelectDay">"Select weekday: "</string>
</resources>