<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/lblAddNewRecipe"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textbox_style"
        android:hint="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textbox_style"
        android:gravity="top|start"
        android:hint="Email"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/evInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/textbox_style"
        android:gravity="top|start"
        android:hint="Email"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            style="@style/NoBackgroundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblCancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            style="@style/NoBackgroundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/lblAdd"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>